# ncParticleEditor

./: CMakeLists.txt  CrashRptWrapper.cpp  CrashRptWrapper.h  Info.plist.in  LICENSE  README.md  azure-pipelines.yml  io.github.ncine.ncparticleeditor.desktop  package.desktop  particle_editor.cpp  particle_editor.h  particle_editor_gui.cpp  particle_editor_lua.cpp  particle_editor_lua.h
.github/workflows/: android.yml  codeql-analysis.yml  emscripten.yml  linux.yml  macos.yml  mingw.yml  windows.yml
android/: build.gradle.in
android/src/main/cpp/: CMakeLists.txt.in
android/src/main/java/: LoadLibrariesTV.java.in
android/src/main/java/io/github/ncine/ncparticleeditor/: LoadLibraries.java.in
android/src/main/res/values/: strings.xml.in
cmake/: custom_crashrpt.cmake  custom_fontawesome.cmake  find_ncine.cmake  package_build_android.cmake  package_check_info.cmake  package_copy_targets.cmake  package_crashrpt.cmake  package_generated_sources.cmake  package_get_version.cmake  package_imported_targets.cmake  package_info.cmake  package_installation.cmake  package_options.cmake
src/: CrashRptWrapper.cpp  particle_editor.cpp  particle_editor.h  particle_editor_gui.cpp  particle_editor_gui_labels.h  particle_editor_lua.cpp  particle_editor_lua.h
